[package]
name = "rust-snake-game-tutorial"
version = "0.1.0"
authors = ["Marcos Vinicius Souza Campos <contato.marcoscampos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
piston_window= "0.109.0"
